--- a/sunjoy-psv/sunjoy-file/Dockerfile
+++ b/sunjoy-psv/sunjoy-file/Dockerfile
@@ -14,9 +14,11 @@ COPY target/*.jar /home/sunjoy/app.jar
 
 #docker run -e PARAMS="--server.port 9090"
 ENV PARAMS="--server.port=8080 --spring.profiles.active=prod \
+           --spring.cloud.nacos.username:habib \
+           --spring.cloud.nacos.password:habib \
            --spring.cloud.nacos.discovery.server-addr=nacos-server.dev.svc.cluster.local.:8848 \
            --spring.cloud.nacos.config.server-addr=nacos-server.dev.svc.cluster.local:8848 \
-           --spring.cloud.nacos.config.shared-configs[0]=application-prod.yaml \
+           --spring.cloud.nacos.config.shared-configs[0]=application.yaml \
            --spring.cloud.nacos.config.namespace=sunjoy --spring.cloud.nacos.config.file-extension=yaml"
 RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
 #
