--- a/sunjoy-auth/src/main/resources/bootstrap.yml
+++ b/sunjoy-auth/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 # Tomcat
-server: 
+server:
   port: 8081
 
 # Spring
@@ -16,13 +16,17 @@ spring:
       discovery:
         # 服务注册地址
         server-addr: 192.168.2.5:30908
-        namespace: sunjoy
+        namespace: dev
+        group: sunjoy-pms
       config:
-        namespace: sunjoy
+        namespace: dev
+        group: sunjoy-pms
         # 配置中心地址
         server-addr: 192.168.2.5:30908
         # 配置文件格式
         file-extension: yaml
         # 共享配置
         shared-configs:
-          - application-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+          - data-id: application.${spring.cloud.nacos.config.file-extension}
+            refresh: true
+            group: sunjoy-pms
