--- a/sunjoy-psv/sunjoy-system/pom.xml
+++ b/sunjoy-psv/sunjoy-system/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -67,6 +67,11 @@
             <artifactId>sunjoy-common-datascope</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.sunjoy</groupId>
+            <artifactId>sunjoy-api-system</artifactId>
+        </dependency>
+
         <!-- sunjoy Common Log -->
         <dependency>
             <groupId>com.sunjoy</groupId>
@@ -82,6 +87,11 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
 
     </dependencies>
