解决网关路由时body内容为null的问题

--- a/sunjoy-gateway/pom.xml
+++ b/sunjoy-gateway/pom.xml
@@ -83,12 +83,17 @@
             <artifactId>sunjoy-common-redis</artifactId>
         </dependency>
 
-        
+
         <!-- Springdoc -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
 
     </dependencies>
