--- a/sunjoy-psv/sunjoy-gen/pom.xml
+++ b/sunjoy-psv/sunjoy-gen/pom.xml
@@ -76,6 +76,12 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
