perf: 1、完善区域选择组件，明确了选择返回值，同时使用redis缓存区域信息，进一步提升了查询效率 2、完善车场模型 feat: 3、新增租户管理功能 3、增加了相关数据库脚本

--- a/sunjoy-psv/sunjoy-system/pom.xml
+++ b/sunjoy-psv/sunjoy-system/pom.xml
@@ -110,6 +110,16 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+
+                <configuration>
+                    <source>16</source> <!-- 设置为需要的版本 -->
+                    <target>16</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
