--- a/pom.xml
+++ b/pom.xml
@@ -239,7 +239,18 @@
                 <artifactId>sunjoy-api-system</artifactId>
                 <version>${sunjoy.version}</version>
             </dependency>
+            <!-- mqtt服务 -->
+            <dependency>
+                <groupId>com.sunjoy</groupId>
+                <artifactId>sunjoy-common-mqtt</artifactId>
+                <version>${sunjoy.version}</version>
+            </dependency>
 
+            <dependency>
+                <groupId>com.sunjoy</groupId>
+                <artifactId>sunjoy-parkpub</artifactId>
+                <version>${sunjoy.version}</version>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
             <dependency>
                 <groupId>javax.xml.bind</groupId>
@@ -277,6 +288,9 @@
         <module>sunjoy-psv</module>
         <module>sunjoy-visual</module>
         <module>sunjoy-parking</module>
+        <module>sunjoy-parking/sunjoy-parkbill</module>
+        <module>sunjoy-parking/sunjoy-parkorder</module>
+        <module>sunjoy-parking/sunjoy-parkpay</module>
 
     </modules>
     <packaging>pom</packaging>
