--- a/sunjoy-parking/sunjoy-parkctrl/pom.xml
+++ b/sunjoy-parking/sunjoy-parkctrl/pom.xml
@@ -107,5 +107,17 @@
             <artifactId>sunjoy-common-mqtt</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
