perf: 1,完善车辆通行规则 2、完善车辆入场流程逻辑处理 feat: 1、实现车辆出场逻辑处理

--- a/sunjoy-parking/pom.xml
+++ b/sunjoy-parking/pom.xml
@@ -15,6 +15,7 @@
         <module>sunjoy-parkmodel</module>
         <module>sunjoy-parkctrl</module>
         <module>sunjoy-parkpub</module>
+        <module>sunjoy-parkclient</module>
     </modules>
 
     <properties>
