--- a/sunjoy-parking/sunjoy-parkctrl/pom.xml
+++ b/sunjoy-parking/sunjoy-parkctrl/pom.xml
@@ -105,7 +105,10 @@
             <groupId>com.sunjoy</groupId>
             <artifactId>sunjoy-common-mqtt</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
