--- a/sunjoy-parking/sunjoy-parkclient/pom.xml
+++ b/sunjoy-parking/sunjoy-parkclient/pom.xml
@@ -18,6 +18,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- SpringCloud Alibaba Nacos -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -42,11 +46,9 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-
-        <!-- sunjoy Common Log -->
         <dependency>
             <groupId>com.sunjoy</groupId>
-            <artifactId>sunjoy-common-log</artifactId>
+            <artifactId>sunjoy-common-redis</artifactId>
         </dependency>
 
         <dependency>
@@ -56,13 +58,14 @@
         <!-- sunjoy Common Swagger -->
         <dependency>
             <groupId>com.sunjoy</groupId>
-            <artifactId>sunjoy-common-swagger</artifactId>
+            <artifactId>sunjoy-common-security</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.sunjoy</groupId>
             <artifactId>sunjoy-parkpub</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -83,6 +86,23 @@
         <dependency>
             <groupId>com.sunjoy</groupId>
             <artifactId>sunjoy-common-mqtt</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
