--- a/sunjoy-parking/sunjoy-parkclient/src/main/resources/bootstrap.yml
+++ b/sunjoy-parking/sunjoy-parkclient/src/main/resources/bootstrap.yml
@@ -2,14 +2,42 @@
 server:
   port: 8309
 
+#mqtt平台
+mqtt:
+  brokerUrl: tcp://192.168.2.11:1883
+  clientName: 黄金山小海停车场
 # Spring
 spring:
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   application:
-    # 应用名称
     name: sunjoy-parkclient
+  datasource:
+    # 确保 Url 配置无误，去掉额外的前缀
+    url: jdbc:h2:file:E:/h2db/mydatabase;AUTO_SERVER=TRUE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  sql:
+    init:
+      schema-locations: classpath:sql/schemal.sql
+      mode: always
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+      sharedCache:
+        mode: jakarta.persistence.sharedCache.mode.ALL
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    generate-ddl: true
+  h2:
+    console:
+      enabled: true
+      path: /h2
 
   profiles:
     # 环境配置
