--- a/sunjoy-parking/sunjoy-parkctrl/pom.xml
+++ b/sunjoy-parking/sunjoy-parkctrl/pom.xml
@@ -109,6 +109,11 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.39.246.ALL</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
