--- a/sunjoy-ui/sunjoy-ui-admin/package.json
+++ b/sunjoy-ui/sunjoy-ui-admin/package.json
@@ -51,8 +51,10 @@
     "jsencrypt": "3.0.0-rc.1",
     "localforage": "^1.10.0",
     "nprogress": "0.2.0",
+    "qrcode": "^1.5.4",
     "quill": "1.3.7",
     "screenfull": "5.0.2",
+    "socket.io-client": "^4.8.1",
     "sortablejs": "1.10.2",
     "vue": "2.6.12",
     "vue-count-to": "1.0.13",
